# Slicer3D

./: .gitignore  CMakeLists.txt  DeveloperGuide.md  README.md  README_CN.md  Slicer3D.json  SuperBuildPrerequisites.cmake
.github/workflows/: build.yml
SuperBuild/: External_vtkRenderingVR.cmake  External_vtkRenderingVRModels.cmake
VirtualReality/: CMakeLists.txt  qSlicerVirtualRealityModuleWidget.cxx  qSlicerVirtualRealityModuleWidget.h
VirtualReality/Logic/: vtkSlicerVirtualRealityLogic.cxx  vtkSlicerVirtualRealityLogic.h
VirtualReality/MRML/: CMakeLists.txt  vtkMRMLVirtualRealityConfigure.h.in  vtkMRMLVirtualRealityViewNode.cxx  vtkMRMLVirtualRealityViewNode.h
VirtualReality/MRMLDM/: CMakeLists.txt
VirtualReality/Resources/UI/: qSlicerVirtualRealityModuleWidget.ui
VirtualReality/Widgets/: qMRMLVirtualRealityView.cxx  qMRMLVirtualRealityView.h  qMRMLVirtualRealityView_p.h
